POWR-428 updates to services and offices padding

--- a/web/sites/default/config/views.view.bureaus_and_offices.yml
+++ b/web/sites/default/config/views.view.bureaus_and_offices.yml
@@ -40,8 +40,8 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: 'Filter bureaus and offices'
-          reset_button: true
+          submit_button: Search
+          reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: false
@@ -71,12 +71,12 @@ display:
       style:
         type: html_list
         options:
-          row_class: 'list-group-item list-group-item-action'
+          row_class: 'list-group-item list-group-item-action mb-3'
           default_row_class: false
           uses_fields: false
           type: ul
-          wrapper_class: container
-          class: 'list-group col-12'
+          wrapper_class: ''
+          class: 'list-group col-12 no-gutters'
       row:
         type: search_api
         options:
@@ -181,9 +181,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
-              layout_manager: '0'
-              media_creator: '0'
-              media_manager: '0'
+              sitewide_editor: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -216,19 +214,6 @@ display:
           plugin_id: search_api
       title: 'Bureaus and offices'
       header:
-        area:
-          id: area
-          table: views
-          field: area
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: true
-          tokenize: false
-          content:
-            value: '<p>Browse or search through the bureaus and offices in the City of Portland, Oregon.</p>'
-            format: simple_editor
-          plugin_id: text
         result:
           id: result
           table: views
@@ -236,8 +221,8 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          empty: false
-          content: 'Displaying @start - @end of @total matching bureaus and offices'
+          empty: true
+          content: '@total bureaus and offices'
           plugin_id: result
       footer: {  }
       empty: {  }
