--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.group.field_shortname_or_acronym
     - field.storage.node.field_end_date
     - field.storage.node.field_start_date
     - field.storage.node.field_start_time
@@ -85,10 +84,10 @@ display:
               field: field_start_time
               rendered: true
               rendered_strip: false
-          row_class: ''
+          row_class: 'list-group-item mb-3 ml-5'
           default_row_class: true
           type: ul
-          wrapper_class: item-list
+          wrapper_class: ''
           class: ''
       row:
         type: fields
@@ -294,7 +293,7 @@ display:
           expose:
             label: ''
           plugin_id: standard
-      title: 'Group events'
+      title: 'Upcoming events'
       header:
         result:
           id: result
@@ -436,39 +435,54 @@ display:
           id: title
           table: node_field_data
           field: title
-          entity_type: node
-          entity_field: title
-          label: ''
-          alter:
-            alter_text: false
-            make_link: false
-            absolute: false
-            trim: false
-            word_boundary: false
-            ellipsis: false
-            strip_tags: false
-            html: false
-          hide_empty: false
-          empty_zero: false
-          settings:
-            link_to_entity: true
-          plugin_id: field
           relationship: none
           group_type: group
           admin_label: ''
+          label: ''
           exclude: false
-          element_type: ''
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: false
+            ellipsis: false
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: h4
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
+          hide_empty: false
+          empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
           type: string
+          settings:
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -479,6 +493,9 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          entity_type: node
+          entity_field: title
+          plugin_id: field
         field_start_date:
           id: field_start_date
           table: node__field_start_date
@@ -593,7 +610,8 @@ display:
           hide_alter_empty: true
           click_sort_column: value
           type: time_formatter
-          settings: {  }
+          settings:
+            time_format: 'g:i a'
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -727,69 +745,6 @@ display:
           admin_label: ''
           label: ''
           exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-        field_shortname_or_acronym:
-          id: field_shortname_or_acronym
-          table: group__field_shortname_or_acronym
-          field: field_shortname_or_acronym
-          relationship: gid
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -859,8 +814,8 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          empty: false
-          content: 'Displaying @start - @end of @total upcoming events. '
+          empty: true
+          content: '@total upcoming events. '
           plugin_id: result
         area:
           id: area
@@ -869,10 +824,10 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          empty: false
+          empty: true
           tokenize: true
           content:
-            value: '<a href="/{{ field_shortname_or_acronym | lower  }}/events/archive">View past events</a>'
+            value: '<a href="/group/{{ raw_arguments.gid }}/events/archive">View past events</a>'
             format: simple_editor
           plugin_id: text
       arguments:
@@ -888,8 +843,8 @@ display:
             value: all
             title_enable: false
             title: All
-          title_enable: true
-          title: '{{ arguments.gid|placeholder }} upcoming events'
+          title_enable: false
+          title: ''
           default_argument_type: group_id_from_url
           default_argument_options: {  }
           default_argument_skip_url: false
@@ -923,7 +878,6 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
-        - 'config:field.storage.group.field_shortname_or_acronym'
         - 'config:field.storage.node.field_end_date'
         - 'config:field.storage.node.field_start_date'
         - 'config:field.storage.node.field_start_time'
@@ -941,39 +895,54 @@ display:
           id: title
           table: node_field_data
           field: title
-          entity_type: node
-          entity_field: title
-          label: ''
-          alter:
-            alter_text: false
-            make_link: false
-            absolute: false
-            trim: false
-            word_boundary: false
-            ellipsis: false
-            strip_tags: false
-            html: false
-          hide_empty: false
-          empty_zero: false
-          settings:
-            link_to_entity: true
-          plugin_id: field
           relationship: none
           group_type: group
           admin_label: ''
+          label: ''
           exclude: false
-          element_type: ''
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: false
+            ellipsis: false
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: h4
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
+          hide_empty: false
+          empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
           type: string
+          settings:
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -984,6 +953,9 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          entity_type: node
+          entity_field: title
+          plugin_id: field
         field_start_date:
           id: field_start_date
           table: node__field_start_date
@@ -1098,7 +1070,8 @@ display:
           hide_alter_empty: true
           click_sort_column: value
           type: time_formatter
-          settings: {  }
+          settings:
+            time_format: 'g:i a'
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -1286,75 +1259,14 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        field_shortname_or_acronym:
-          id: field_shortname_or_acronym
-          table: group__field_shortname_or_acronym
-          field: field_shortname_or_acronym
-          relationship: gid
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
       defaults:
         fields: false
         filters: false
         filter_groups: false
         header: false
         arguments: false
+        title: false
+        empty: false
       display_description: ''
       filters:
         status:
@@ -1600,7 +1512,7 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: 'Displaying @start - @end of @total past events. '
+          content: '@total past events. '
           plugin_id: result
         area:
           id: area
@@ -1609,10 +1521,10 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          empty: false
+          empty: true
           tokenize: true
           content:
-            value: '<a href="/{{ field_shortname_or_acronym | lower  }}/events">View upcoming events</a>'
+            value: '<a href="/group/{{ raw_arguments.gid }}/events">View upcoming events</a>'
             format: simple_editor
           plugin_id: text
       arguments:
@@ -1628,8 +1540,8 @@ display:
             value: all
             title_enable: false
             title: All
-          title_enable: true
-          title: '{{ arguments.gid|placeholder }} past events'
+          title_enable: false
+          title: ''
           default_argument_type: group_id_from_url
           default_argument_options: {  }
           default_argument_skip_url: false
@@ -1652,6 +1564,8 @@ display:
           entity_type: group_content
           entity_field: gid
           plugin_id: group_id
+      title: 'Past events'
+      empty: {  }
     cache_metadata:
       max-age: -1
       contexts:
@@ -1663,7 +1577,6 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
-        - 'config:field.storage.group.field_shortname_or_acronym'
         - 'config:field.storage.node.field_end_date'
         - 'config:field.storage.node.field_start_date'
         - 'config:field.storage.node.field_start_time'
