--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -36,8 +36,8 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: 'Filter services'
-          reset_button: true
+          submit_button: Search
+          reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: false
@@ -67,11 +67,11 @@ display:
       style:
         type: html_list
         options:
-          row_class: 'list-group-item list-group-item-action'
+          row_class: 'list-group-item list-group-item-action mb-3'
           default_row_class: true
           uses_fields: false
           type: ul
-          wrapper_class: container
+          wrapper_class: ''
           class: 'list-group col-12'
       row:
         type: search_api
@@ -211,21 +211,8 @@ display:
           expose:
             label: ''
           plugin_id: search_api
-      title: Services
+      title: 'City Services'
       header:
-        area:
-          id: area
-          table: views
-          field: area
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: true
-          tokenize: false
-          content:
-            value: '<p>Browse or search through the services provided by the city as well as frequently requested services provided by the county and regional organizations.</p>'
-            format: simple_editor
-          plugin_id: text
         result:
           id: result
           table: views
@@ -233,8 +220,8 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          empty: false
-          content: 'Displaying @start - @end of @total matching services'
+          empty: true
+          content: '@total services'
           plugin_id: result
       footer: {  }
       empty: {  }
