--- a/web/themes/custom/cloudy/package.json
+++ b/web/themes/custom/cloudy/package.json
@@ -4,7 +4,8 @@
     "description": "Barrio SASS implementation",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "gulp"
     },
     "keywords": [
         "SASS",
@@ -14,14 +15,13 @@
     ],
     "author": "@hatuhay",
     "license": "MIT",
-    "dependencies": {
-        "bootstrap": "^4.0.0"
-    },
+    "dependencies": {},
     "devDependencies": {
         "gulp": "~3.9.1",
         "gulp-autoprefixer": "~4.0.0",
         "gulp-concat": "^2.6.1",
         "gulp-sass": "~3.1.0",
+        "bootstrap": "^4.0.0",
         "gulp-minify-css": "~1.2.4",
         "gulp-sourcemaps": "^2.6.0",
         "gulp-uglify": "~3.0.0",
