POWR-478 Rename styles and update gitignore to ignore source maps

--- a/web/themes/custom/cloudy/cloudy.libraries.yml
+++ b/web/themes/custom/cloudy/cloudy.libraries.yml
@@ -6,7 +6,7 @@ global-styling:
     js/global.js: {}
   css:
     component:
-      css/index.css: {}
+      css/style.css: {}
       https://use.fontawesome.com/releases/v5.2.0/css/all.css:
         type: external
         minified: true
