--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ Thumbs.db
 # SASS #
 ##########
 .sass-cache
+web/themes/custom/**/*.map
 
 # Things in the core directory that Drupal 8 commits in the repository.
 !web/core/**/*.gz
