POWR-379 - removed unnecessary robots meta tags

--- a/web/sites/default/config/metatag.metatag_defaults.group_content__program-group_node-notification.yml
+++ b/web/sites/default/config/metatag.metatag_defaults.group_content__program-group_node-notification.yml
@@ -5,4 +5,4 @@ dependencies: {  }
 id: group_content__program-group_node-notification
 label: 'Group content: Program: Group node (Notification)'
 tags:
-  robots: 'noindex, nofollow, noarchive, nosnippet, noydir, noimageindex'
+  robots: 'noindex, nofollow'
