--- a/web/sites/default/config/metatag.metatag_defaults.node__alert.yml
+++ b/web/sites/default/config/metatag.metatag_defaults.node__alert.yml
@@ -1,8 +1,8 @@
-uuid: 26a2b734-eab4-425c-b69c-c1387f44f4bb
+uuid: 90b1e5ab-1fcf-4749-a03e-6e495c1a725e
 langcode: en
 status: true
 dependencies: {  }
 id: node__alert
 label: 'Content: Alert'
 tags:
-  robots: 'noindex, nofollow, noarchive, nosnippet, noydir, noimageindex'
+  robots: 'noindex, nofollow'
