--- a/web/sites/default/config/metatag.metatag_defaults.node__notification.yml
+++ b/web/sites/default/config/metatag.metatag_defaults.node__notification.yml
@@ -5,4 +5,4 @@ dependencies: {  }
 id: node__notification
 label: 'Content: Notification'
 tags:
-  robots: 'noindex, nofollow, noarchive, nosnippet, noydir, noimageindex'
+  robots: 'noindex, nofollow'
