--- a/web/sites/default/config/metatag.metatag_defaults.group_content__group_content_type_ab6b4e6568ca8.yml
+++ b/web/sites/default/config/metatag.metatag_defaults.group_content__group_content_type_ab6b4e6568ca8.yml
@@ -5,4 +5,4 @@ dependencies: {  }
 id: group_content__group_content_type_ab6b4e6568ca8
 label: 'Group content: Elected official: Group node (Notification)'
 tags:
-  robots: 'noindex, nofollow, noarchive, nosnippet, noydir, noimageindex'
+  robots: 'noindex, nofollow'
