--- a/web/sites/default/config/metatag.metatag_defaults.group_content__group_content_type_ba2512a3d9225.yml
+++ b/web/sites/default/config/metatag.metatag_defaults.group_content__group_content_type_ba2512a3d9225.yml
@@ -5,4 +5,4 @@ dependencies: {  }
 id: group_content__group_content_type_ba2512a3d9225
 label: 'Group content: Bureau/office: Group node (Notification)'
 tags:
-  robots: 'noindex, nofollow, noarchive, nosnippet, noydir, noimageindex'
+  robots: 'noindex, nofollow'
