POWR-428 update the step action button to read as additional step instructions.

--- a/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
+++ b/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
@@ -25,7 +25,7 @@ id: paragraph.service_step.field_step_action_button
 field_name: field_step_action_button
 entity_type: paragraph
 bundle: service_step
-label: Element
+label: 'step instructions'
 description: 'Add another element to your step instructions.'
 required: false
 translatable: false
@@ -36,41 +36,41 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
-      simple_text: simple_text
-      document: document
       form_app_button: form_app_button
+      document: document
       email_button: email_button
       telephone_button: telephone_button
       fax_button: fax_button
       location: location
       columns_equal: columns_equal
       card_deck: card_deck
+      simple_text: simple_text
     target_bundles_drag_drop:
-      simple_text:
+      form_app_button:
         enabled: true
         weight: -41
       document:
         enabled: true
         weight: -40
-      form_app_button:
-        enabled: true
-        weight: -39
       email_button:
         enabled: true
-        weight: -38
+        weight: -39
       telephone_button:
         enabled: true
-        weight: -37
+        weight: -38
       fax_button:
         enabled: true
-        weight: -36
+        weight: -37
       location:
         enabled: true
-        weight: -35
+        weight: -36
       columns_equal:
         enabled: true
-        weight: -34
+        weight: -35
       card_deck:
+        enabled: true
+        weight: -34
+      simple_text:
         enabled: true
         weight: -33
       service_step:
