POWR-428 create consistency in body paragraph field.

--- a/web/sites/default/config/core.entity_form_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.guide.default.yml
@@ -28,20 +28,14 @@ content:
   field_body:
     weight: 4
     settings:
-      title: Slice
-      title_plural: Slices
-      edit_mode: closed
-      closed_mode: summary
-      autocollapse: all
-      add_mode: modal
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: simple_text
-      features:
-        duplicate: duplicate
-        collapse_edit_all: collapse_edit_all
-        add_above: add_above
     third_party_settings: {  }
-    type: paragraphs
+    type: entity_reference_paragraphs
     region: content
   field_legacy_path:
     weight: 26
