--- a/web/sites/default/config/core.entity_form_display.paragraph.card_deck.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.card_deck.default.yml
@@ -13,21 +13,15 @@ bundle: card_deck
 mode: default
 content:
   field_cards:
-    type: paragraphs
+    type: entity_reference_paragraphs
     weight: 0
     settings:
       title: Card
       title_plural: Cards
       edit_mode: open
-      closed_mode: summary
-      autocollapse: none
       add_mode: button
       form_display_mode: default
-      default_paragraph_type: card
-      features:
-        duplicate: duplicate
-        collapse_edit_all: collapse_edit_all
-        add_above: add_above
+      default_paragraph_type: _none
     third_party_settings: {  }
     region: content
 hidden:
