--- a/web/sites/default/config/core.entity_form_display.paragraph.columns_equal.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.columns_equal.default.yml
@@ -14,21 +14,15 @@ bundle: columns_equal
 mode: default
 content:
   field_column:
-    type: paragraphs
+    type: entity_reference_paragraphs
     weight: 101
     settings:
       title: Column
       title_plural: Columns
-      edit_mode: closed
-      closed_mode: summary
-      autocollapse: all
-      add_mode: modal
+      edit_mode: open
+      add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: _none
-      features:
-        duplicate: duplicate
-        collapse_edit_all: collapse_edit_all
-        add_above: add_above
     third_party_settings: {  }
     region: content
   moderation_state:
