--- a/web/sites/default/config/field.field.paragraph.columns_equal.field_column.yml
+++ b/web/sites/default/config/field.field.paragraph.columns_equal.field_column.yml
@@ -7,10 +7,13 @@ dependencies:
     - paragraphs.paragraphs_type.audio
     - paragraphs.paragraphs_type.columns_equal
     - paragraphs.paragraphs_type.document
+    - paragraphs.paragraphs_type.email_button
+    - paragraphs.paragraphs_type.form_app_button
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.location
     - paragraphs.paragraphs_type.quote
     - paragraphs.paragraphs_type.simple_text
+    - paragraphs.paragraphs_type.telephone_button
     - paragraphs.paragraphs_type.video
   module:
     - custom_add_another
@@ -34,72 +37,75 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
+      simple_text: simple_text
       document: document
       location: location
-      simple_text: simple_text
       image: image
       quote: quote
       audio: audio
       video: video
+      form_app_button: form_app_button
+      telephone_button: telephone_button
+      email_button: email_button
     target_bundles_drag_drop:
-      columns_equal:
-        weight: 10
-        enabled: false
-      email_button:
-        weight: 11
-        enabled: false
-      fax_button:
-        weight: 12
-        enabled: false
-      document:
-        enabled: true
-        weight: 12
-      form_app_button:
-        weight: 13
-        enabled: false
-      location:
-        enabled: true
-        weight: 14
-      service_mode:
-        weight: 15
-        enabled: false
-      service_step:
-        weight: 16
-        enabled: false
       simple_text:
         enabled: true
-        weight: 17
+        weight: -41
+      document:
+        enabled: true
+        weight: -40
+      location:
+        enabled: true
+        weight: -39
       image:
         enabled: true
-        weight: 18
+        weight: -38
       quote:
         enabled: true
-        weight: 18
-      telephone_button:
-        weight: 18
-        enabled: false
-      address:
-        weight: 19
-        enabled: false
+        weight: -37
       audio:
         enabled: true
-        weight: 20
-      card:
-        weight: 20
-        enabled: false
-      building:
-        weight: 20
-        enabled: false
-      card_deck:
-        weight: 21
-        enabled: false
+        weight: -36
       video:
         enabled: true
-        weight: 24
+        weight: -35
+      form_app_button:
+        enabled: true
+        weight: -34
+      telephone_button:
+        enabled: true
+        weight: -33
+      email_button:
+        enabled: true
+        weight: -32
+      columns_equal:
+        weight: -31
+        enabled: false
+      fax_button:
+        weight: -30
+        enabled: false
+      service_mode:
+        weight: -29
+        enabled: false
+      service_step:
+        weight: -28
+        enabled: false
+      address:
+        weight: -27
+        enabled: false
+      card:
+        weight: -26
+        enabled: false
+      building:
+        weight: -25
+        enabled: false
+      card_deck:
+        weight: -24
+        enabled: false
       group_contact_information:
-        weight: 26
+        weight: -23
         enabled: false
       service_location:
-        weight: 29
+        weight: -22
         enabled: false
 field_type: entity_reference_revisions
