--- a/web/sites/default/config/paragraphs.paragraphs_type.fax_button.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.fax_button.yml
@@ -5,7 +5,7 @@ dependencies:
   content:
     - 'file:file:26b033cf-0da6-4d30-b1fe-70e1a6ec83dd'
 id: fax_button
-label: 'Fax Button'
+label: 'Fax number'
 icon_uuid: 26b033cf-0da6-4d30-b1fe-70e1a6ec83dd
 description: 'Add a button that shows a fax number'
 behavior_plugins: {  }
