--- a/web/sites/default/config/paragraphs.paragraphs_type.form_app_button.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.form_app_button.yml
@@ -5,7 +5,7 @@ dependencies:
   content:
     - 'file:file:3707e0b5-a700-47be-a128-690ec1b5e4b8'
 id: form_app_button
-label: 'Form/App Button'
+label: Button
 icon_uuid: 3707e0b5-a700-47be-a128-690ec1b5e4b8
 description: 'Button for adding a form or application button'
 behavior_plugins: {  }
