--- a/web/sites/default/config/paragraphs.paragraphs_type.telephone_button.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.telephone_button.yml
@@ -5,7 +5,7 @@ dependencies:
   content:
     - 'file:file:31266d4b-0aab-4a98-8ba7-c2355e0143fb'
 id: telephone_button
-label: 'Telephone Button'
+label: 'Phone number'
 icon_uuid: 31266d4b-0aab-4a98-8ba7-c2355e0143fb
 description: 'Add a button that will dial a phone number if clicked on mobile device.'
 behavior_plugins: {  }
