--- a/web/sites/default/config/core.entity_form_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.information.default.yml
@@ -23,21 +23,15 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_body:
-    type: paragraphs
+    type: entity_reference_paragraphs
     weight: 1
     settings:
-      title: slice
-      title_plural: slices
-      edit_mode: closed
-      closed_mode: summary
-      autocollapse: all
-      add_mode: modal
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: simple_text
-      features:
-        duplicate: duplicate
-        collapse_edit_all: collapse_edit_all
-        add_above: add_above
     third_party_settings: {  }
     region: content
   field_summary:
