--- a/web/sites/default/config/field.field.node.event.field_body.yml
+++ b/web/sites/default/config/field.field.node.event.field_body.yml
@@ -6,11 +6,17 @@ dependencies:
     - field.storage.node.field_body
     - node.type.event
     - paragraphs.paragraphs_type.audio
+    - paragraphs.paragraphs_type.card_deck
     - paragraphs.paragraphs_type.columns_equal
     - paragraphs.paragraphs_type.document
+    - paragraphs.paragraphs_type.email_button
+    - paragraphs.paragraphs_type.fax_button
+    - paragraphs.paragraphs_type.form_app_button
     - paragraphs.paragraphs_type.image
+    - paragraphs.paragraphs_type.location
     - paragraphs.paragraphs_type.quote
     - paragraphs.paragraphs_type.simple_text
+    - paragraphs.paragraphs_type.telephone_button
     - paragraphs.paragraphs_type.video
   module:
     - custom_add_another
@@ -36,7 +42,13 @@ settings:
     target_bundles:
       simple_text: simple_text
       columns_equal: columns_equal
+      card_deck: card_deck
       quote: quote
+      form_app_button: form_app_button
+      email_button: email_button
+      telephone_button: telephone_button
+      fax_button: fax_button
+      location: location
       document: document
       image: image
       video: video
@@ -44,11 +56,29 @@ settings:
     target_bundles_drag_drop:
       simple_text:
         enabled: true
-        weight: -35
+        weight: -41
       columns_equal:
         enabled: true
-        weight: -34
+        weight: -40
+      card_deck:
+        enabled: true
+        weight: -39
       quote:
+        enabled: true
+        weight: -38
+      form_app_button:
+        enabled: true
+        weight: -37
+      email_button:
+        enabled: true
+        weight: -36
+      telephone_button:
+        enabled: true
+        weight: -35
+      fax_button:
+        enabled: true
+        weight: -34
+      location:
         enabled: true
         weight: -33
       document:
@@ -60,40 +90,28 @@ settings:
       video:
         enabled: true
         weight: -30
-      email_button:
-        weight: -29
-        enabled: false
-      fax_button:
-        weight: -28
-        enabled: false
-      form_app_button:
-        weight: -27
-        enabled: false
-      location:
-        weight: -26
-        enabled: false
-      service_mode:
-        weight: -25
-        enabled: false
-      service_step:
-        weight: -24
-        enabled: false
-      telephone_button:
-        weight: -23
-        enabled: false
-      address:
-        weight: -22
-        enabled: false
-      building:
-        weight: -21
-        enabled: false
-      group_contact_information:
-        weight: -20
-        enabled: false
-      service_location:
-        weight: -19
-        enabled: false
       audio:
         enabled: true
-        weight: 20
+        weight: -29
+      service_mode:
+        weight: -28
+        enabled: false
+      service_step:
+        weight: -27
+        enabled: false
+      address:
+        weight: -26
+        enabled: false
+      building:
+        weight: -25
+        enabled: false
+      group_contact_information:
+        weight: -24
+        enabled: false
+      service_location:
+        weight: -23
+        enabled: false
+      card:
+        weight: -22
+        enabled: false
 field_type: entity_reference_revisions
