--- a/web/sites/default/config/field.field.node.guide.field_body.yml
+++ b/web/sites/default/config/field.field.node.guide.field_body.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_body
     - node.type.guide
     - paragraphs.paragraphs_type.audio
+    - paragraphs.paragraphs_type.card_deck
     - paragraphs.paragraphs_type.columns_equal
     - paragraphs.paragraphs_type.document
     - paragraphs.paragraphs_type.email_button
@@ -41,6 +42,7 @@ settings:
     target_bundles:
       simple_text: simple_text
       columns_equal: columns_equal
+      card_deck: card_deck
       quote: quote
       form_app_button: form_app_button
       email_button: email_button
@@ -54,56 +56,62 @@ settings:
     target_bundles_drag_drop:
       simple_text:
         enabled: true
-        weight: -35
+        weight: -41
       columns_equal:
         enabled: true
-        weight: -34
+        weight: -40
+      card_deck:
+        enabled: true
+        weight: -39
       quote:
         enabled: true
-        weight: -33
+        weight: -38
       form_app_button:
         enabled: true
-        weight: -32
+        weight: -37
       email_button:
         enabled: true
-        weight: -31
+        weight: -36
       telephone_button:
         enabled: true
-        weight: -30
+        weight: -35
       fax_button:
         enabled: true
-        weight: -29
+        weight: -34
       location:
         enabled: true
-        weight: -28
+        weight: -33
       document:
         enabled: true
-        weight: -27
+        weight: -32
       image:
         enabled: true
-        weight: -26
+        weight: -31
       video:
         enabled: true
-        weight: -25
-      service_mode:
-        weight: -24
-        enabled: false
-      service_step:
-        weight: -23
-        enabled: false
-      address:
-        weight: -22
-        enabled: false
-      building:
-        weight: -21
-        enabled: false
-      group_contact_information:
-        weight: -20
-        enabled: false
-      service_location:
-        weight: -19
-        enabled: false
+        weight: -30
       audio:
         enabled: true
-        weight: 20
+        weight: -29
+      service_mode:
+        weight: -28
+        enabled: false
+      service_step:
+        weight: -27
+        enabled: false
+      address:
+        weight: -26
+        enabled: false
+      building:
+        weight: -25
+        enabled: false
+      group_contact_information:
+        weight: -24
+        enabled: false
+      service_location:
+        weight: -23
+        enabled: false
+      card:
+        weight: -22
+        enabled: false
 field_type: entity_reference_revisions
