--- a/web/sites/default/config/paragraphs.paragraphs_type.email_button.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.email_button.yml
@@ -5,7 +5,7 @@ dependencies:
   content:
     - 'file:file:def30087-5060-47be-9f94-656e73626d74'
 id: email_button
-label: 'Email Button'
+label: Email
 icon_uuid: def30087-5060-47be-9f94-656e73626d74
 description: 'Add a button that links to an email address.'
 behavior_plugins: {  }
