POWR-114 demo configuration from multidev POC site

--- a/web/sites/default/config/field.field.node.event_test.field_end_date.yml
+++ b/web/sites/default/config/field.field.node.event_test.field_end_date.yml
@@ -1,28 +1,26 @@
-uuid: 2857c215-4e8f-4157-936f-86df406c1390
+uuid: 3c3e196d-842d-4cab-a09c-0ec5be39983a
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.feeds_item
-    - node.type.event
+    - field.storage.node.field_end_date
+    - node.type.event_test
   module:
     - custom_add_another
-    - feeds
+    - datetime
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.event.feeds_item
-field_name: feeds_item
+id: node.event_test.field_end_date
+field_name: field_end_date
 entity_type: node
-bundle: event
-label: 'Feeds item'
+bundle: event_test
+label: 'End date'
 description: ''
 required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings:
-  handler: 'default:feeds_feed'
-  handler_settings: {  }
-field_type: feeds_item
+settings: {  }
+field_type: datetime
