POWR-428 more small updates to display and layout.

--- a/web/sites/default/config/core.entity_view_display.node.guide.full.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.full.yml
@@ -1,16 +1,18 @@
-uuid: 6268f8e4-b565-4a86-9b36-8450feacee88
+uuid: 2ca5dcae-545d-409d-be5d-720dcd9be2dc
 langcode: en
-status: true
+status: false
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
-    - field.field.node.news.field_body
-    - field.field.node.news.field_legacy_path
-    - field.field.node.news.field_summary
-    - field.field.node.news.field_topics
-    - node.type.news
+    - core.entity_view_mode.node.full
+    - field.field.node.guide.field_body
+    - field.field.node.guide.field_legacy_path
+    - field.field.node.guide.field_related_content
+    - field.field.node.guide.field_summary
+    - field.field.node.guide.field_topics
+    - node.type.guide
   module:
     - ds
+    - entity_reference_revisions
     - panelizer
     - user
 third_party_settings:
@@ -28,45 +30,37 @@ third_party_settings:
       settings: {  }
     regions:
       content:
+        - content_moderation_control
         - node_title
-        - node_changed_date
         - field_summary
+        - field_body
     fields:
-      node_changed_date:
-        plugin_id: node_changed_date
-        weight: 1
-        label: inline
-        formatter: ds_post_date_medium
-        ft:
-          id: default
-          settings:
-            lb: Updated
-            lb-col: false
-            classes: {  }
       node_title:
         plugin_id: node_title
-        weight: 0
+        weight: 1
         label: hidden
         formatter: default
-        settings:
-          link: true
-          wrapper: h2
-          class: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-id: node.news.teaser
+id: node.guide.full
 targetEntityType: node
-bundle: news
-mode: teaser
+bundle: guide
+mode: full
 content:
-  field_summary:
-    type: string
-    weight: 2
+  content_moderation_control:
+    weight: 0
     region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_body:
+    weight: 3
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    type: entity_reference_revisions_entity_view
+    region: content
+  field_summary:
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -83,11 +77,11 @@ content:
             ow-el: ''
             ow-cl: ''
             ow-at: ''
-            fis-el: ''
-            fis-cl: ''
+            fis: true
+            fis-el: p
+            fis-cl: lead
             fis-at: ''
-            fi: true
-            fi-el: p
+            fi-el: ''
             fi-cl: ''
             fi-at: ''
             suffix: ''
@@ -96,12 +90,13 @@ content:
             ow: false
             ow-def-at: false
             ow-def-cl: false
-            fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
+    type: string
+    region: content
 hidden:
-  content_moderation_control: true
-  field_body: true
   field_legacy_path: true
+  field_related_content: true
   field_topics: true
   links: true
