--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -221,7 +221,7 @@ display:
           group_type: group
           admin_label: ''
           empty: true
-          content: '@total services'
+          content: '@total services found.'
           plugin_id: result
       footer: {  }
       empty: {  }
