POWR-428 make paragraph configuration consistent.

--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -63,16 +63,16 @@ content:
     settings:
       title: 'service mode'
       title_plural: 'service modes'
-      edit_mode: closed
+      edit_mode: open
       closed_mode: summary
       autocollapse: all
-      add_mode: modal
+      add_mode: button
       form_display_mode: default
       default_paragraph_type: service_mode
       features:
         duplicate: duplicate
         collapse_edit_all: collapse_edit_all
-        add_above: add_above
+        add_above: '0'
     third_party_settings: {  }
     region: content
   field_summary:
