--- a/web/sites/default/config/core.entity_form_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.event.default.yml
@@ -40,14 +40,20 @@ content:
   field_body:
     weight: 12
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
+      title: paragraph
+      title_plural: paragraphs
       edit_mode: open
+      closed_mode: summary
+      autocollapse: none
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: _none
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: '0'
     third_party_settings: {  }
-    type: entity_reference_paragraphs
+    type: paragraphs
     region: content
   field_end_date:
     weight: 9
@@ -82,12 +88,12 @@ content:
     type: entity_reference_paragraphs
     weight: 11
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
+      title: location
+      title_plural: locations
       edit_mode: open
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: _none
     third_party_settings: {  }
     region: content
   field_legacy_path:
