--- a/web/sites/default/config/core.entity_form_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.guide.default.yml
@@ -28,14 +28,20 @@ content:
   field_body:
     weight: 4
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
+      title: paragraph
+      title_plural: paragraphs
       edit_mode: open
+      closed_mode: summary
+      autocollapse: none
       add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: simple_text
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: '0'
     third_party_settings: {  }
-    type: entity_reference_paragraphs
+    type: paragraphs
     region: content
   field_legacy_path:
     weight: 26
