--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -38,6 +38,7 @@ permissions:
   - 'use editorial transition review'
   - 'use text format simple_editor'
   - 'view all media revisions'
+  - 'view all revisions'
   - 'view any unpublished content'
   - 'view city_service revisions'
   - 'view event revisions'
@@ -50,3 +51,4 @@ permissions:
   - 'view own unpublished content'
   - 'view search api pages'
   - 'view the administration theme'
+  - 'view unpublished paragraphs'
