--- a/web/sites/default/config/core.entity_form_display.paragraph.service_mode.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.service_mode.default.yml
@@ -26,10 +26,10 @@ content:
     settings:
       title: step
       title_plural: steps
-      edit_mode: closed
+      edit_mode: open
       closed_mode: summary
       autocollapse: all
-      add_mode: modal
+      add_mode: button
       form_display_mode: default
       default_paragraph_type: service_step
       features:
