POWR-428 update the services view

--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -211,7 +211,7 @@ display:
           expose:
             label: ''
           plugin_id: search_api
-      title: 'City Services'
+      title: 'City services'
       header:
         result:
           id: result
@@ -221,7 +221,7 @@ display:
           group_type: group
           admin_label: ''
           empty: true
-          content: '@total services found.'
+          content: '@total services found'
           plugin_id: result
       footer: {  }
       empty: {  }
