--- a/web/sites/default/config/media.type.document.yml
+++ b/web/sites/default/config/media.type.document.yml
@@ -1,7 +1,12 @@
 uuid: cbb84086-7cb9-4e20-93ac-6905104b74aa
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - crop
+third_party_settings:
+  crop:
+    image_field: _none
 _core:
   default_config_hash: YvaDPWRTYvcfZVJIh9mror4AbfYxCm6t2nIW1U4szL4
 id: document
@@ -13,5 +18,5 @@ new_revision: false
 source_configuration:
   source_field: field_document
 field_map:
-  mime: field_mime_type
-  size: field_document_size
+  mimetype: field_document
+  filesize: field_document
