POWR-369 Google Analytics reporting modules testing

--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -157,3 +157,10 @@ rh_node: 1.0.0-beta4
 google_analytics: 0.0.0
 config_filter: 1.3.0
 config_split: 1.4.0
+update: 0.0.0
+google_analytics_reports_api: 0.0.0
+google_analytics_reports: 0.0.0
+charts: 3.0.0-beta1
+charts_google: 3.0.0-beta1
+charts_highcharts: 3.0.0-beta1
+total_control: 0.0.0
