--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "drupal/anonymous_login": "^1.1",
         "drupal/bootstrap_barrio": "^4.15",
         "drupal/bootstrap_library": "^1.11",
+        "drupal/charts": "^3.0@beta",
         "drupal/chosen": "^2.5",
         "drupal/clamav": "^1.0",
         "drupal/components": "^1.0",
@@ -55,6 +56,7 @@
         "drupal/facets": "^1.0",
         "drupal/field_group": "^1.0",
         "drupal/google_analytics": "^2.3",
+        "drupal/google_analytics_reports": "^3.0@beta",
         "drupal/group": "^1.0",
         "drupal/hsts": "^1.0",
         "drupal/inline_entity_form": "^1.0@RC",
@@ -75,6 +77,7 @@
         "drupal/telephone_validation": "^2.1",
         "drupal/textarea_widget_for_text": "^1.1",
         "drupal/time_field": "^1.1",
+        "drupal/total_control": "^2.0@alpha",
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bulk_operations": "^2.2",
         "drupal/viewsreference": "^1.2",
