--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -11,6 +11,9 @@ module:
   block_content: 0
   bootstrap_library: 0
   breakpoint: 0
+  charts: 0
+  charts_google: 0
+  charts_highcharts: 0
   chosen: 0
   chosen_field: 0
   chosen_lib: 0
@@ -54,6 +57,8 @@ module:
   gmedia: 0
   gnode: 0
   google_analytics: 0
+  google_analytics_reports: 0
+  google_analytics_reports_api: 0
   group: 0
   help: 0
   history: 0
@@ -134,8 +139,10 @@ module:
   time_field: 0
   token: 0
   toolbar: 0
+  total_control: 0
   twig_tweak: 0
   unified_twig_ext: 0
+  update: 0
   user: 0
   video_embed_field: 0
   video_embed_media: 0
